--- a/Falterboysite-EPK.html
+++ b/Falterboysite-EPK.html
@@ -1,45 +1,28 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <link rel='icon' href='images/favicon.ico' type='image/x.icon'/>
-    <meta charset="utf-8">
-    <title>Falterboy-EPK</title>
-    <link rel='stylesheet' href='falterboysite.css'>
-  </head>
-  <body>
-    <nav>
-      <div class='hero'>
-        
-        </div>
-        <ul class='navlinks'>
-          <li>
-            <a href='Falterboysite.html'>Home</a>
-          </li>
-          <li>
-            <a href='Falterboysite-gallery.html'>Gallery</a>
-          </li>
-          <li>
-            <a href='Falterboysite-EPK.html'>EPK</a>
-          </li>
-          <li>
-            <a href='Falterboysite-Calendar.html'>Calendar</a>
-          </li>
-        </ul>
-      <div class='burger'>
-        <div class='line1'></div>
-        <div class='line2'></div>
-        <div class='line3'></div>
-      </div>
-    </nav>
+<!doctype html>
+
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+
+  
+  <title>EPK</title>
+  <meta name="description" content="Falterboy">
+  <meta name="author" content="SitePoint">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="falterboysite.css">
+</head>
+
+<body>
+	<img id ="vintage" src="/Applications/MAMP/htdocs/Web-Dev-Projects/Falterboy-site/JBuff_0191_vintcool copy.jpg">
+
+		<div class= "belowpic">
 
 
-    <img id='logo' src="/Users/buffjeremy/Desktop/falterboy Hi Res.jpg " alt='image logo'>
+			<h2> Falterboy is a West Michigan based indie pop rock group fronted by Michigan native Jeremy Schantz. The group got its start in Tampa Florida while Jeremy spent some time there. Eventually Falterboy relocated back to west Michigan, where they released their first Jammie nominated album Blasphemy (check it out <a href = "https://soundcloud.com/falterboy/sets/blasphemy" >here</a>) in 2015. They are currently working hard on a follow up album. </h2>
+		
+		</div> 
 
-    <h3> EPK </h3>
 
-    <footer>
-      <h4> <a href ="https://wwww.facebook.com/falterboy">Facebook</a> </h4>
-        <h4> <a href ="https://www.twitter.com/falterboy" > @falterboy </a> </h4>
-    </footer>
-  </body>
+  
+</body>
 </html>
