--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 <body>
   <script src="js/scripts.js"></script>
   <ul>
-  <li><a href="falterboysite.html">Home</a></li>
-  <li><a href="falterboy-siteEPK.html">EPK</a></li>
+  <li><a href="Falterboysite.html">Home</a></li>
+  <li><a href="Falterboy-siteEPK.html">EPK</a></li>
   <li><a href="contact.html">Contact</a></li>
-  <li><a href="falterboysite-about.html">About</a></li>
+  <li><a href="Falterboysite-about.html">About</a></li>
   <li><a href="gallery.html">Gallery</a></li>
 </ul> 
 <img src = "Falterboy-site/falterboy Hi Res.jpg">
