--- a/Falterboy-siteEPK.html
+++ b/Falterboy-siteEPK.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-	<img id ="vintage" src="/Applications/MAMP/htdocs/Web-Dev-Projects/Falterboy-site/JBuff_0191_vintcool copy.jpg">
+	<img id ="vintage" src="JBuff_0191_vintcool.jpg">
 
 		<div class= "belowpic">
 
