--- a/Falterboy-siteEPK.html
+++ b/Falterboy-siteEPK.html
@@ -21,6 +21,11 @@
 			<h2> Falterboy is a West Michigan based indie pop rock group fronted by Michigan native Jeremy Schantz. The group got its start in Tampa Florida while Jeremy spent some time there. Eventually Falterboy relocated back to west Michigan, where they released their first Jammie nominated album Blasphemy (check it out <a href = "https://soundcloud.com/falterboy/sets/blasphemy" >here</a>) in 2015. They are currently working hard on a follow up album. </h2>
 		
 		</div> 
+	<div>
+<a href="https://www.facebook.com/falterboy" class="fa fa-facebook"></a>
+<a href="https://www.twitter.com/falterboy" class="fa fa-twitter"></a>
+<a href="https://www.youtube.com/channel/UCH6uP150BeUpN5JzDsTmXpQ" class="fa fa-youtube"></a>
+	</div>
 
 
   
