--- a/Falterboy-siteEPK.html
+++ b/Falterboy-siteEPK.html
@@ -14,6 +14,13 @@
 </head>
 
 <body>
+	
+	<ul>
+  		<li><a href="Falterboysite.html">Home</a></li>
+  		<li><a href="Falterboy-siteEPK.html">EPK</a></li>
+  		<li><a href="gallery.html">Gallery</a></li>
+	</ul> 
+
 	<img id ="vintage" src="JBuff_0191_vintcool.jpg">
 
 		<div class= "belowpic">
