--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <script src="js/scripts.js"></script>
   <ul>
-  <li><a href="Falterboysite.html">Home</a></li>
+  <li><a href="index.html">Home</a></li>
   <li><a href="Falterboy-siteEPK.html">EPK</a></li>
   <li><a href="gallery.html">Gallery</a></li>
 </ul> 
