--- a/Falterboy-siteEPK.html
+++ b/Falterboy-siteEPK.html
@@ -18,7 +18,7 @@
 	<ul>
   		<li><a href="Falterboysite.html">Home</a></li>
   		<li><a href="Falterboy-siteEPK.html">EPK</a></li>
-  		<li><a href="gallery.html">Gallery</a></li>
+  		<li><a href="Falterboysite-gallery.html">Gallery</a></li>
 	</ul> 
 
 	<img id ="vintage" src="JBuff_0191_vintcool.jpg">
