--- a/Falterboysite-gallery.html
+++ b/Falterboysite-gallery.html
@@ -9,11 +9,9 @@
   </head>
   <body>
     <ul>
-  <li><a href="Falterboysite.html">Home</a></li>
+  <li><a href="index.html">Home</a></li>
   <li><a href="Falterboy-siteEPK.html">EPK</a></li>
-  <li><a href="contact.html">Contact</a></li>
-  <li><a href="Falterboysite-about.html">About</a></li>
-  <li><a href="gallery.html">Gallery</a></li>
+  <li><a href="Falterboysite-gallery.html">Gallery</a></li>
 </ul> 
     
     <h1> Gallery Coming Soon! </h1>
