--- a/Falterboy-siteEPK.html
+++ b/Falterboy-siteEPK.html
@@ -16,7 +16,7 @@
 <body>
 	
 	<ul>
-  		<li><a href="Falterboysite.html">Home</a></li>
+  		<li><a href="index.html">Home</a></li>
   		<li><a href="Falterboy-siteEPK.html">EPK</a></li>
   		<li><a href="Falterboysite-gallery.html">Gallery</a></li>
 	</ul> 
