--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <li><a href="Falterboy-siteEPK.html">EPK</a></li>
   <li><a href="Falterboysite-gallery.html">Gallery</a></li>
 </ul> 
-<img src = "Falterboy-site/falterboy Hi Res.jpg">
+<img src = "falterboy Hi Res.jpg">
 <div>
 <a href="https://www.facebook.com/falterboy" class="fa fa-facebook"></a>
 <a href="https://www.twitter.com/falterboy" class="fa fa-twitter"></a>
