--- a/Falterboysite-gallery.html
+++ b/Falterboysite-gallery.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <link rel='icon' href='images/favicon.ico' type='image/x.icon'/>
-    <meta charset="utf-8">
-    <title>Falterboy-Gallery</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="falterboysite.css">
-  </head>
+  <html lang="en">
+<head>
+  <meta charset="utf-8">
+
+  
+  <title>EPK</title>
+  <meta name="description" content="Falterboy">
+  <meta name="author" content="SitePoint">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="falterboysite.css">
+</head>
+
   <body>
     <ul>
   <li><a href="index.html">Home</a></li>
