--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <ul>
   <li><a href="index.html">Home</a></li>
   <li><a href="Falterboy-siteEPK.html">EPK</a></li>
+  <li><a href="Falterboysite-Calendar.html">Calendar</a></li>
   <li><a href="Falterboysite-gallery.html">Gallery</a></li>
 </ul> 
 <img src = "falterboy Hi Res.jpg">
