--- a/Falterboysite-Calendar.html
+++ b/Falterboysite-Calendar.html
@@ -11,7 +11,7 @@
     <ul>
   <li><a href="index.html">Home</a></li>
   <li><a href="Falterboy-siteEPK.html">EPK</a></li>
-  <li><a href="gallery.html">Gallery</a></li>
+  <li><a href="Falterboysite-gallery.html">Gallery</a></li>
 </ul> 
     
     <h1> Calendar Coming Soon! </h1>
