--- a/Falterboysite-Calendar.html
+++ b/Falterboysite-Calendar.html
@@ -13,9 +13,7 @@
   <li><a href="Falterboy-siteEPK.html">EPK</a></li>
   <li><a href="Falterboysite-gallery.html">Gallery</a></li>
 </ul> 
-    <div>
-      <h1> Calendar Coming Soon! </h1>
-    </div>
+    <h1 id = "greeting" >Calendar Coming Soon! </h1>
    
     
     
