--- a/Falterboysite-Calendar.html
+++ b/Falterboysite-Calendar.html
@@ -11,6 +11,7 @@
     <ul>
   <li><a href="index.html">Home</a></li>
   <li><a href="Falterboy-siteEPK.html">EPK</a></li>
+  <li><a href="Falterboysite-Calendar.html">Calendar</a></li>
   <li><a href="Falterboysite-gallery.html">Gallery</a></li>
 </ul> 
     <h2 id = "greeting" >Calendar Coming Soon! </h2>
