--- a/Falterboy-siteEPK.html
+++ b/Falterboy-siteEPK.html
@@ -16,9 +16,10 @@
 <body>
 	
 	<ul>
-  		<li><a href="index.html">Home</a></li>
-  		<li><a href="Falterboy-siteEPK.html">EPK</a></li>
-  		<li><a href="Falterboysite-gallery.html">Gallery</a></li>
+  	<li><a href="index.html">Home</a></li>
+  	<li><a href="Falterboy-siteEPK.html">EPK</a></li>
+  	<li><a href="Falterboysite-Calendar.html">Calendar</a></li>
+ 	<li><a href="Falterboysite-gallery.html">Gallery</a></li>
 	</ul> 
 
 	<img id ="vintage" src="JBuff_0191_vintcool.jpg">
