--- a/Falterboy-siteEPK.html
+++ b/Falterboy-siteEPK.html
@@ -38,6 +38,18 @@ In a world filled with noise, he reminds us that authenticity and resilience are
 				
 		</div> 
 	<div>
+		
+		<ul>
+			<li>Locaton: Tampa Bay</li>
+			<li>Band Name: Falterboy</li>
+			<li>Band Members: Jeremy "Buff" Schantz</li>
+			<li> Genre: Pop Indie Rock </li>
+			<li>Contact Information: falterboyproject@gmail.com</li>
+			
+		</ul>
+
+	</div>	
+	<div>
 <a href="https://www.facebook.com/falterboy" class="fa fa-facebook"></a>
 <a href="https://www.twitter.com/falterboy" class="fa fa-twitter"></a>
 <a href="https://www.youtube.com/channel/UCH6uP150BeUpN5JzDsTmXpQ" class="fa fa-youtube"></a>
