--- a/Falterboy-siteEPK.html
+++ b/Falterboy-siteEPK.html
@@ -40,11 +40,11 @@ In a world filled with noise, he reminds us that authenticity and resilience are
 			<div>
 		
 				<ul>
-					<li>Locaton: Tampa Bay</li>
-					<li>Band Name: Falterboy</li>
-					<li>Band Members: Jeremy "Buff" Schantz</li>
-					<li> Genre: Pop Indie Rock </li>
-					<li>Contact Information: falterboyproject@gmail.com</li>
+					<li class = "fact" >Locaton: Tampa Bay</li>
+					<li class = "fact" >Band Name: Falterboy</li>
+					<li class = "fact" >Band Members: Jeremy "Buff" Schantz</li>
+					<li class = "fact" > Genre: Pop Indie Rock </li>
+					<li class = "fact" >Contact Information: falterboyproject@gmail.com</li>
 			
 				</ul>
 
