--- a/Falterboy-siteEPK.html
+++ b/Falterboy-siteEPK.html
@@ -37,7 +37,7 @@ In a world filled with noise, he reminds us that authenticity and resilience are
 		
 				
 		</div> 
-			<div class="container1>
+			<div class="container1">
 		
 				<ul>
 					<li class="fact">Locaton: Tampa Bay</li>
@@ -49,7 +49,7 @@ In a world filled with noise, he reminds us that authenticity and resilience are
 				</ul>
 
 			</div>	
-	<div class="container2>
+	<div class="container2">
 <a href="https://www.facebook.com/falterboy" class="fa fa-facebook"></a>
 <a href="https://www.twitter.com/falterboy" class="fa fa-twitter"></a>
 <a href="https://www.youtube.com/channel/UCH6uP150BeUpN5JzDsTmXpQ" class="fa fa-youtube"></a>
