--- a/Falterboysite-gallery.html
+++ b/Falterboysite-gallery.html
@@ -27,7 +27,7 @@
     <div>
 <a href="https://www.facebook.com/falterboy" class="fa fa-facebook"></a>
 <a href="https://www.twitter.com/falterboy" class="fa fa-twitter"></a>
-<a href="https://www.youtube.com/channel/UCH6uP150BeUpN5JzDsTmXpQ" class="fa fa-youtube"></a>
+<a href="https://youtube.com/@falterboy1393?si=45hlWfCNy4pPPXQL" class="fa fa-youtube"></a>
   </div>
   </body>
     
