--- a/Falterboysite-gallery.html
+++ b/Falterboysite-gallery.html
@@ -24,14 +24,14 @@
     <div class="gallery">
   <input type="checkbox" >
   <img src="images/newworldgig.jpg" alt="uh oh no pic">
-  <img src="images/IMG_0672.jpg" alt="uh oh no pic">
+  <img src="images/1060FC43-05DD-4339-8809-0824022AB7C5_1_105_c.jpeg" alt="uh oh no pic">
   <img src="images/IMG_0639.jpg" alt="uh oh no pic">
-  <img src="" alt="uh oh no pic">
-  <img src="" alt="buh oh no pic">
-  <img src="" alt="auh oh no pic">
-  <img src="" alt="uh oh no pic">
-  <img src="" alt="uh oh no pic">
-  <img src="" alt="uh oh no pic">
+  <img src="images/34DC8443-8AA8-437E-928A-315D7634CCBB.jpeg" alt="uh oh no pic">
+  <img src="images/72667E87-5BAC-4F92-8C2F-E643148BB15A_1_105_c.jpeg" alt="buh oh no pic">
+  <img src="images/E7E27D2C-ABC1-406B-BA42-5E928814AA2E_1_105_c.jpeg" alt="auh oh no pic">
+  <img src="images/756678D0-7772-4F09-96BD-A79748FF3477_1_105_c.jpeg" alt="uh oh no pic">
+  <img src="images/9F8D1EDD-6E91-47F2-A4B4-79A0C9B128D2.jpeg" alt="uh oh no pic">
+  <img src="images/C918EF81-3D25-4769-96C1-1D60CEA5968F.jpeg" alt="uh oh no pic">
 </div>
     
     
