--- a/Falterboy-siteEPK.html
+++ b/Falterboy-siteEPK.html
@@ -40,6 +40,7 @@
 					<li class="fact">Band Members: Jeremy "Buff" Schantz</li>
 					<li class="fact"> Genre: Pop Indie Rock</li>
 					<li class="fact">Contact Information: falterboyproject@gmail.com</li>
+					    <a href="FalterboyEPK.pdf">Download PDF</a>
 			
 				</ul>
 
