--- a/Falterboy-siteEPK.html
+++ b/Falterboy-siteEPK.html
@@ -40,10 +40,9 @@
 					<li class="fact">Band Members: Jeremy "Buff" Schantz</li>
 					<li class="fact"> Genre: Pop Indie Rock</li>
 					<li class="fact">Contact Information: falterboyproject@gmail.com</li>
-					    <a href="FalterboyEPK.pdf">Download PDF</a>
+					<a href="FalterboyEPK.pdf">Download PDF Version</a>
 			
 				</ul>
-
 			</div>	
 	<div class="container2">
 <a href="https://www.facebook.com/falterboy" class="fa fa-facebook"></a>
