--- a/Falterboy-siteEPK.html
+++ b/Falterboy-siteEPK.html
@@ -35,9 +35,9 @@
 			<div class="container1">
 		
 				<ul>
-					<li class="fact">Locaton: Tampa Bay</li>
 					<li class="fact">Band Name: Falterboy</li>
-					<li class="fact">Band Members: Jeremy "Buff" Schantz</li>
+					<li class="fact">Location: Tampa Bay</li>
+					<li class="fact">Band Members: Jeremy "Buff" Schantz with rotating support</li>
 					<li class="fact"> Genre: Pop Indie Rock</li>
 					<li class="fact">Contact Information: falterboyproject@gmail.com</li>
 					<a href="FalterboyEPK.pdf">Download PDF Version</a>
