--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   <link rel="stylesheet" href="falterboysite.css">
 
 </head>
+<style>
+  * { outline: 1px solid red; }
+</style>
 
 <body>
   <script src="js/scripts.js"></script>
