--- a/index.html
+++ b/index.html
@@ -1,34 +1,32 @@
 <!doctype html>
-
 <html lang="en">
 <head>
   <meta charset="utf-8">
-
   <title>Falterboy</title>
   <meta name="description" content="Falterboy">
   <meta name="author" content="SitePoint">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="falterboysite.css">
 
+  <!-- Bootstrap & Font Awesome -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+  <!-- Your Custom CSS -->
+  <link rel="stylesheet" href="falterboysite.css">
 </head>
-<style>
-  * { outline: 1px solid red; }
-</style>
 
 <body>
   <script src="js/scripts.js"></script>
-  <ul>
-  <li><a href="index.html">Home</a></li>
-  <li><a href="Falterboy-siteEPK.html">EPK</a></li>
-  <li><a href="Falterboysite-Calendar.html">Calendar</a></li>
-  <li><a href="Falterboysite-gallery.html">Gallery</a></li>
-</ul> 
-<img src = "falterboy Hi Res.jpg">
-<div>
-<a href="https://www.facebook.com/falterboy" class="fa fa-facebook"></a>
-<a href="https://www.twitter.com/falterboy" class="fa fa-twitter"></a>
-<a href="https://youtube.com/@falterboy1393?si=45hlWfCNy4pPPXQL" class="fa fa-youtube"></a>
-</div>
-</body>
-</html>
+
+  <!-- ✅ Fixed Nav: Added Bootstrap nav classes -->
+  <nav>
+    <ul class="nav">
+      <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+      <li class="nav-item"><a class="nav-link" href="Falterboy-siteEPK.html">EPK</a></li>
+      <li class="nav-item"><a class="nav-link" href="Falterboysite-Calendar.html">Calendar</a></li>
+      <li class="nav-item"><a class="nav-link" href="Falterboysite-gallery.html">Gallery</a></li>
+    </ul>
+  </nav>
+
+  <!-- Image
+
