--- a/index.html
+++ b/index.html
@@ -28,5 +28,14 @@
     </ul>
   </nav>
 
-  <!-- Image
+  <!-- Image -->
+  <img src="falterboy Hi Res.jpg" alt="Falterboy" />
 
+  <!-- Social Icons -->
+  <div>
+    <a href="https://www.facebook.com/falterboy" class="fa fa-facebook"></a>
+    <a href="https://www.twitter.com/falterboy" class="fa fa-twitter"></a>
+    <a href="https://youtube.com/@falterboy1393?si=45hlWfCNy4pPPXQL" class="fa fa-youtube"></a>
+  </div>
+</body>
+</html>
