--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
   </nav>
 
   <!-- Image -->
-  <img src="falterboy Hi Res.jpg" alt="Falterboy" />
+  <img src="Falterboy-site/falterboy Hi Res.jpg" alt="Falterboy" class="responsive-img">
+
+  <!<img src="falterboy Hi Res.jpg" alt="Falterboy" />-->
 
   <!-- Social Icons -->
   <div>
