--- a/index.html
+++ b/index.html
@@ -29,9 +29,8 @@
   </nav>
 
   <!-- Image -->
-  <img src="Falterboy-site/falterboy Hi Res.jpg" alt="Falterboy" class="responsive-img">
 
-  <!<img src="falterboy Hi Res.jpg" alt="Falterboy" />-->
+  <img src="falterboy Hi Res.jpg" alt="Falterboy" class="responsive-img" />
 
   <!-- Social Icons -->
   <div>
