--- a/Falterboy-siteEPK.html
+++ b/Falterboy-siteEPK.html
@@ -1,56 +1,61 @@
-<!doctype html>
 
+<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
-
-  
   <title>EPK</title>
   <meta name="description" content="Falterboy">
   <meta name="author" content="SitePoint">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+  <!-- External styles -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="falterboysite.css">
 </head>
 
 <body>
-	
-	<ul>
-  	<li><a href="index.html">Home</a></li>
-  	<li><a href="Falterboy-siteEPK.html">EPK</a></li>
-  	<li><a href="Falterboysite-Calendar.html">Calendar</a></li>
- 	<li><a href="Falterboysite-gallery.html">Gallery</a></li>
-	</ul> 
 
-	<img id ="vintage" src="JBuff_0191_vintcool.jpg">
+  <!-- Navigation Bar -->
+  <nav>
+    <ul class="nav">
+      <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+      <li class="nav-item"><a class="nav-link" href="Falterboy-siteEPK.html">EPK</a></li>
+      <li class="nav-item"><a class="nav-link" href="Falterboysite-Calendar.html">Calendar</a></li>
+      <li class="nav-item"><a class="nav-link" href="Falterboysite-gallery.html">Gallery</a></li>
+    </ul>
+  </nav>
 
-		<div class= "belowpic">
+  <!-- Main Image -->
+  <img id="vintage" src="JBuff_0191_vintcool.jpg" alt="Falterboy Image" class="responsive-img">
 
+  <!-- Bio section -->
+  <div class="belowpic">
+    <h2>
+      In the vast landscape of musical artistry, there are those artists who dare to walk the path less traveled. Falterboy, the brainchild of singer-songwriter Jeremy ‘Buff’ Schantz, emerged from the humid heart of Tampa, combining the raw power of rock with the introspective depth of indie and the infectious energy of pop punk.<br><br>
+      Whether performing in intimate venues or commanding grand stages, his energy and passion invite listeners to immerse themselves in his songs. The connection between artist and audience is palpable, forging an unforgettable experience at each show.<br><br>
+      Jeremy's journey as Falterboy is a testament to his unwavering dedication, resilience, and artistic commitment. He has garnered the respect of music enthusiasts and industry insiders alike. In a world filled with noise, he reminds us that authenticity and resilience are the keys to creating music that truly matters.
+    </h2>
+  </div>
 
-			<h2> In the vast landscape of musical artistry, there are those artists who dare to walk the path less traveled. Falterboy, the brainchild of singer-songwriter Jeremy ‘Buff’ Schantz emerged from the humid heart of Tampa, combining the raw power of rock with the introspective depth of indie and the infectious energy of pop punk.
-<br>Whether performing in intimate venues or commanding grand stages, his energy and passion invite listeners to immerse themselves in his songs. The connection between artist and audience is palpable, forging an unforgettable experience at each show.
-<br>Jeremy's journey as Falterboy is a testament to his unwavering dedication, resilience, and artistic commitment. He has garnered the respect of music enthusiasts and industry insiders alike. In a world filled with noise, he reminds us that authenticity and resilience are the keys to creating music that truly matters. 
-				
-		</div> 
-			<div class="container1">
-		
-				<ul>
-					<li class="fact">Band Name: Falterboy</li>
-					<li class="fact">Location: Tampa Bay</li>
-					<li class="fact">Band Members: Jeremy "Buff" Schantz with rotating support</li>
-					<li class="fact"> Genre: Pop Indie Rock</li>
-					<li class="fact">Contact Information: falterboyproject@gmail.com</li>
-					<a href="FalterboyEPK.pdf">Download PDF Version</a>
-			
-				</ul>
-			</div>	
-	<div class="container2">
-<a href="https://www.facebook.com/falterboy" class="fa fa-facebook"></a>
-<a href="https://www.twitter.com/falterboy" class="fa fa-twitter"></a>
-<a href="https://youtube.com/@falterboy1393?si=45hlWfCNy4pPPXQL" class="fa fa-youtube"></a>
-	</div>
+  <!-- Band Facts -->
+  <div class="container1">
+    <ul class="band-facts">
+      <li class="fact">Band Name: Falterboy</li>
+      <li class="fact">Location: Tampa Bay</li>
+      <li class="fact">Band Members: Jeremy "Buff" Schantz with rotating support</li>
+      <li class="fact">Genre: Pop Indie Rock</li>
+      <li class="fact">Contact Information: falterboyproject@gmail.com</li>
+    </ul>
+    <a href="FalterboyEPK.pdf">Download PDF Version</a>
+  </div>
 
+  <!-- Social Icons -->
+  <div class="container2">
+    <a href="https://www.facebook.com/falterboy" class="fa fa-facebook"></a>
+    <a href="https://www.twitter.com/falterboy" class="fa fa-twitter"></a>
+    <a href="https://youtube.com/@falterboy1393?si=45hlWfCNy4pPPXQL" class="fa fa-youtube"></a>
+  </div>
 
-  
 </body>
 </html>
