--- a/Falterboysite-Calendar.html
+++ b/Falterboysite-Calendar.html
@@ -9,12 +9,13 @@
     <link rel='stylesheet' href='falterboysite.css'>
   </head>
   <body>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="Falterboy-siteEPK.html">EPK</a></li>
-      <li><a href="Falterboysite-Calendar.html">Calendar</a></li>
-      <li><a href="Falterboysite-gallery.html">Gallery</a></li>
-    </ul> 
+    <ul class="nav">
+      <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+      <li class="nav-item"><a class="nav-link" href="Falterboy-siteEPK.html">EPK</a></li>
+      <li class="nav-item"><a class="nav-link" href="Falterboysite-Calendar.html">Calendar</a></li>
+      <li class="nav-item"><a class="nav-link" href="Falterboysite-gallery.html">Gallery</a></li>
+    </ul>
+    
     <header>
       <h1>May 2025 Calendar</h1>
     </header>
@@ -32,7 +33,7 @@
           <div class="day">Fri</div>
           <div class="day">Sat</div>
 
-          <!-- Empty spaces for days before May starts (May 1st is a Thursday) -->
+          <!-- May 2025 starts on Thursday -->
           <div class="date"></div>
           <div class="date"></div>
           <div class="date"></div>
@@ -80,6 +81,7 @@
     </footer>
   </body>
 </html>
+
 
     
    
