--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 
   <!-- Social Icons -->
   <div>
-    <a href="https://www.facebook.com/falterboy" class="fa fa-facebook"></a>
-    <a href="https://www.twitter.com/falterboy" class="fa fa-twitter"></a>
+    <a href="https://www.facebook.com/falterboy" class="fa fa-facebook"></a> 
+    <a href="https://tiktok.com/@falterboyband" class="fab fa-tiktok"></a>
     <a href="https://youtube.com/@falterboy1393?si=45hlWfCNy4pPPXQL" class="fa fa-youtube"></a>
   </div>
 </body>
