--- a/Falterboy-siteEPK.html
+++ b/Falterboy-siteEPK.html
@@ -52,9 +52,9 @@
   </div>
 
   <!-- Social Icons -->
-  <div class="container2">
-    <a href="https://www.facebook.com/falterboy" class="fa fa-facebook"></a>
-    <a href="https://www.twitter.com/falterboy" class="fa fa-twitter"></a>
+<div>
+    <a href="https://www.facebook.com/falterboy" class="fa fa-facebook"></a> 
+    <a href="https://tiktok.com/@falterboyband" class="fab fa-tiktok"></a>
     <a href="https://youtube.com/@falterboy1393?si=45hlWfCNy4pPPXQL" class="fa fa-youtube"></a>
   </div>
 
