--- a/Falterboysite-Calendar.html
+++ b/Falterboysite-Calendar.html
@@ -76,6 +76,12 @@
           <div class="date">31</div>
         </div>
       </div>
+        <!-- Social Icons -->
+<div>
+    <a href="https://www.facebook.com/falterboy" class="fa fa-facebook"></a> 
+    <a href="https://tiktok.com/@falterboyband" class="fab fa-tiktok"></a>
+    <a href="https://youtube.com/@falterboy1393?si=45hlWfCNy4pPPXQL" class="fa fa-youtube"></a>
+  </div>
     </main>
     <footer>
       <p>&copy; 2025 falterboy</p>
