--- a/Falterboysite-gallery.html
+++ b/Falterboysite-gallery.html
@@ -32,9 +32,10 @@
     <img src="images/C918EF81-3D25-4769-96C1-1D60CEA5968F.jpeg" alt="uh oh no pic">
   </div>
 
-  <div>
-    <a href="https://www.facebook.com/falterboy" class="fa fa-facebook"></a>
-    <a href="https://www.twitter.com/falterboy" class="fa fa-twitter"></a>
+   <!-- Social Icons -->
+<div>
+    <a href="https://www.facebook.com/falterboy" class="fa fa-facebook"></a> 
+    <a href="https://tiktok.com/@falterboyband" class="fab fa-tiktok"></a>
     <a href="https://youtube.com/@falterboy1393?si=45hlWfCNy4pPPXQL" class="fa fa-youtube"></a>
   </div>
 </body>
