--- a/Falterboy-siteEPK.html
+++ b/Falterboy-siteEPK.html
@@ -51,11 +51,12 @@
     <a href="FalterboyEPK.pdf">Download PDF Version</a>
   </div>
 
-  <!-- Social Icons -->
+   <!-- Social Icons -->
 <div>
-    <a href="https://www.facebook.com/falterboy" class="fa fa-facebook"></a> 
-    <a href="https://tiktok.com/@falterboyband" class="fab fa-tiktok"></a>
-    <a href="https://youtube.com/@falterboy1393?si=45hlWfCNy4pPPXQL" class="fa fa-youtube"></a>
+   <a href="https://www.facebook.com/falterboy" class="fab fa-facebook-f"></a>
+<a href="https://youtube.com/@falterboy1393?si=45hlWfCNy4pPPXQL" class="fab fa-youtube"></a>
+<a href="https://tiktok.com/@falterboyband" class="fab fa-tiktok"></a>
+
   </div>
 
 </body>
