--- a/index.html
+++ b/index.html
@@ -32,11 +32,12 @@
 
   <img src="falterboy Hi Res.jpg" alt="Falterboy" class="responsive-img" />
 
-  <!-- Social Icons -->
-  <div>
-    <a href="https://www.facebook.com/falterboy" class="fa fa-facebook"></a> 
-    <a href="https://tiktok.com/@falterboyband" class="fab fa-tiktok"></a>
-    <a href="https://youtube.com/@falterboy1393?si=45hlWfCNy4pPPXQL" class="fa fa-youtube"></a>
+ <!-- Social Icons -->
+<div>
+   <a href="https://www.facebook.com/falterboy" class="fab fa-facebook-f"></a>
+<a href="https://youtube.com/@falterboy1393?si=45hlWfCNy4pPPXQL" class="fab fa-youtube"></a>
+<a href="https://tiktok.com/@falterboyband" class="fab fa-tiktok"></a>
+
   </div>
 </body>
 </html>
