--- a/Falterboy-siteEPK.html
+++ b/Falterboy-siteEPK.html
@@ -24,6 +24,7 @@
       <li class="nav-item"><a class="nav-link" href="Falterboy-siteEPK.html">EPK</a></li>
       <li class="nav-item"><a class="nav-link" href="Falterboysite-Calendar.html">Calendar</a></li>
       <li class="nav-item"><a class="nav-link" href="Falterboysite-gallery.html">Gallery</a></li>
+      <li class="nav-item"><a class="nav-link" href="Falterboysite-Store.html">Store</a></li>
     </ul>
   </nav>
 
