--- a/Falterboysite-Calendar.html
+++ b/Falterboysite-Calendar.html
@@ -78,12 +78,20 @@
         </div>
       </div>
         <!-- Social Icons -->
-<div>
-   <a href="https://www.facebook.com/falterboy" class="fab fa-facebook-f"></a>
-<a href="https://youtube.com/@falterboy1393?si=45hlWfCNy4pPPXQL" class="fab fa-youtube"></a>
-<a href="https://tiktok.com/@falterboyband" class="fab fa-tiktok"></a>
-
+<div class="social-icons">
+  <div class="icon-with-label">
+    <a href="https://www.facebook.com/falterboy" class="fab fa-facebook-f"></a>
+    <span>Facebook</span>
   </div>
+  <div class="icon-with-label">
+    <a href="https://youtube.com/@falterboy1393?si=45hlWfCNy4pPPXQL" class="fab fa-youtube"></a>
+    <span>YouTube</span>
+  </div>
+  <div class="icon-with-label">
+    <a href="https://tiktok.com/@falterboyband" class="fab fa-tiktok"></a>
+    <span>TikTok</span>
+  </div>
+</div>
     </main>
     <footer>
       <p>&copy; 2025 falterboy</p>
