--- a/Falterboysite-gallery.html
+++ b/Falterboysite-gallery.html
@@ -33,13 +33,21 @@
     <img src="images/C918EF81-3D25-4769-96C1-1D60CEA5968F.jpeg" alt="uh oh no pic">
   </div>
 
-  <!-- Social Icons -->
-<div>
-   <a href="https://www.facebook.com/falterboy" class="fab fa-facebook-f"></a>
-<a href="https://youtube.com/@falterboy1393?si=45hlWfCNy4pPPXQL" class="fab fa-youtube"></a>
-<a href="https://tiktok.com/@falterboyband" class="fab fa-tiktok"></a>
-
+ <!-- Social Icons -->
+<div class="social-icons">
+  <div class="icon-with-label">
+    <a href="https://www.facebook.com/falterboy" class="fab fa-facebook-f"></a>
+    <span>Facebook</span>
   </div>
+  <div class="icon-with-label">
+    <a href="https://youtube.com/@falterboy1393?si=45hlWfCNy4pPPXQL" class="fab fa-youtube"></a>
+    <span>YouTube</span>
+  </div>
+  <div class="icon-with-label">
+    <a href="https://tiktok.com/@falterboyband" class="fab fa-tiktok"></a>
+    <span>TikTok</span>
+  </div>
+</div>
 </body>
 </html>
 
