--- a/Falterboysite-Calendar.html
+++ b/Falterboysite-Calendar.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <link rel='icon' href='images/favicon.ico' type='image/x.icon'/>
+    <link rel="icon" href="images/favicon.ico" type="image/x.icon"/>
     <meta charset="utf-8">
     <title>Calendar</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-
-    <link rel='stylesheet' href='falterboysite.css'>
+    <link rel="stylesheet" href="falterboysite.css">
   </head>
   <body>
     <ul class="nav">
@@ -73,32 +72,29 @@
           <div class="date">27</div>
           <div class="date">28</div>
           <div class="date">29</div>
-          <div class="date">30</div>
+          <div class="date show-date" data-show="Falterboy at Pinellas Ale Works, 6–9 PM">30</div>
           <div class="date">31</div>
         </div>
       </div>
-        <!-- Social Icons -->
-<div class="social-icons">
-  <div class="icon-with-label">
-    <a href="https://www.facebook.com/falterboy" class="fab fa-facebook-f"></a>
-    <span>Facebook</span>
-  </div>
-  <div class="icon-with-label">
-    <a href="https://youtube.com/@falterboy1393?si=45hlWfCNy4pPPXQL" class="fab fa-youtube"></a>
-    <span>YouTube</span>
-  </div>
-  <div class="icon-with-label">
-    <a href="https://tiktok.com/@falterboyband" class="fab fa-tiktok"></a>
-    <span>TikTok</span>
-  </div>
-</div>
+
+      <!-- Social Icons -->
+      <div class="social-icons">
+        <div class="icon-with-label">
+          <a href="https://www.facebook.com/falterboy" class="fab fa-facebook-f"></a>
+          <span>Facebook</span>
+        </div>
+        <div class="icon-with-label">
+          <a href="https://youtube.com/@falterboy1393?si=45hlWfCNy4pPPXQL" class="fab fa-youtube"></a>
+          <span>YouTube</span>
+        </div>
+        <div class="icon-with-label">
+          <a href="https://tiktok.com/@falterboyband" class="fab fa-tiktok"></a>
+          <span>TikTok</span>
+        </div>
+      </div>
     </main>
     <footer>
-      <p>&copy; 2025 falterboy</p>
+      <p>&copy; 2025 Falterboy</p>
     </footer>
   </body>
 </html>
-
-
-    
-   
