--- a/Falterboysite-Calendar.html
+++ b/Falterboysite-Calendar.html
@@ -1,13 +1,4 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <link rel="icon" href="images/favicon.ico" type="image/x.icon"/>
-    <meta charset="utf-8">
-    <title>Calendar</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <link rel="stylesheet" href="falterboysite.css">
-  </head>
+</head>
   <body>
     <ul class="nav">
       <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
@@ -16,16 +7,18 @@
       <li class="nav-item"><a class="nav-link" href="Falterboysite-gallery.html">Gallery</a></li>
       <li class="nav-item"><a class="nav-link" href="Falterboysite-Store.html">Store</a></li>
     </ul>
-    
+
     <header>
-      <h1>May 2025 Calendar</h1>
+      <h1>Event Calendar</h1>
     </header>
     <main>
       <div class="calendar">
-        <div class="month">
-          <h2>May 2025</h2>
+        <div class="calendar-header">
+          <button id="prevMonth">◀</button>
+          <h2 id="currentMonthYear"></h2>
+          <button id="nextMonth">▶</button>
         </div>
-        <div class="calendar-grid">
+        <div class="calendar-grid" id="calendarGrid">
           <div class="day">Sun</div>
           <div class="day">Mon</div>
           <div class="day">Tue</div>
@@ -33,51 +26,9 @@
           <div class="day">Thu</div>
           <div class="day">Fri</div>
           <div class="day">Sat</div>
-
-          <!-- May 2025 starts on Thursday -->
-          <div class="date"></div>
-          <div class="date"></div>
-          <div class="date"></div>
-          <div class="date"></div>
-          <div class="date">1</div>
-          <div class="date">2</div>
-          <div class="date">3</div>
-
-          <div class="date">4</div>
-          <div class="date">5</div>
-          <div class="date">6</div>
-          <div class="date">7</div>
-          <div class="date">8</div>
-          <div class="date">9</div>
-          <div class="date">10</div>
-
-          <div class="date">11</div>
-          <div class="date">12</div>
-          <div class="date">13</div>
-          <div class="date">14</div>
-          <div class="date">15</div>
-          <div class="date">16</div>
-          <div class="date">17</div>
-
-          <div class="date">18</div>
-          <div class="date">19</div>
-          <div class="date">20</div>
-          <div class="date">21</div>
-          <div class="date">22</div>
-          <div class="date">23</div>
-          <div class="date">24</div>
-
-          <div class="date">25</div>
-          <div class="date">26</div>
-          <div class="date">27</div>
-          <div class="date">28</div>
-          <div class="date">29</div>
-          <div class="date show-date" data-show="Falterboy at Pinellas Ale Works, 6–9 PM">30</div>
-          <div class="date">31</div>
-        </div>
+          </div>
       </div>
 
-      <!-- Social Icons -->
       <div class="social-icons">
         <div class="icon-with-label">
           <a href="https://www.facebook.com/falterboy" class="fab fa-facebook-f"></a>
@@ -94,7 +45,5 @@
       </div>
     </main>
     <footer>
-      <p>&copy; 2025 Falterboy</p>
+      <p>© 2025 Falterboy</p>
     </footer>
-  </body>
-</html>
