--- a/Falterboysite-Calendar.html
+++ b/Falterboysite-Calendar.html
@@ -6,60 +6,61 @@
   <meta name="description" content="Falterboy">
   <meta name="author" content="SitePoint">
 
-  <!-- Bootstrap & Font Awesome -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-  
-  <!-- Your Custom CSS -->
+   
   <link rel="stylesheet" href="falterboysite.css">
-  <script src="main.js"></script>
-</head>
-  <body>
-    <ul class="nav">
-      <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-      <li class="nav-item"><a class="nav-link" href="Falterboy-siteEPK.html">EPK</a></li>
-      <li class="nav-item"><a class="nav-link" href="Falterboysite-Calendar.html">Calendar</a></li>
-      <li class="nav-item"><a class="nav-link" href="Falterboysite-gallery.html">Gallery</a></li>
-      <li class="nav-item"><a class="nav-link" href="Falterboysite-Store.html">Store</a></li>
-    </ul>
+  </head>
+<body>
+  <ul class="nav">
+    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+    <li class="nav-item"><a class="nav-link" href="Falterboy-siteEPK.html">EPK</a></li>
+    <li class="nav-item"><a class="nav-link" href="Falterboysite-Calendar.html">Calendar</a></li>
+    <li class="nav-item"><a class="nav-link" href="Falterboysite-gallery.html">Gallery</a></li>
+    <li class="nav-item"><a class="nav-link" href="Falterboysite-Store.html">Store</a></li>
+  </ul>
 
-    <header>
-      <h1>Event Calendar</h1>
-    </header>
-    <main>
-      <div class="calendar">
-        <div class="calendar-header">
-          <button id="prevMonth">◀</button>
-          <h2 id="currentMonthYear"></h2>
-          <button id="nextMonth">▶</button>
-        </div>
-        <div class="calendar-grid" id="calendarGrid">
-          <div class="day">Sun</div>
-          <div class="day">Mon</div>
-          <div class="day">Tue</div>
-          <div class="day">Wed</div>
-          <div class="day">Thu</div>
-          <div class="day">Fri</div>
-          <div class="day">Sat</div>
-          </div>
+  <header>
+    <h1>Event Calendar</h1>
+  </header>
+  <main>
+    <div class="calendar">
+      <div class="calendar-header">
+        <button id="prevMonth">◀</button>
+        <h2 id="currentMonthYear"></h2>
+        <button id="nextMonth">▶</button>
       </div>
+      <div class="calendar-grid" id="calendarGrid">
+        <div class="day">Sun</div>
+        <div class="day">Mon</div>
+        <div class="day">Tue</div>
+        <div class="day">Wed</div>
+        <div class="day">Thu</div>
+        <div class="day">Fri</div>
+        <div class="day">Sat</div>
+      </div>
+    </div>
 
-      <div class="social-icons">
-        <div class="icon-with-label">
-          <a href="https://www.facebook.com/falterboy" class="fab fa-facebook-f"></a>
-          <span>Facebook</span>
-        </div>
-        <div class="icon-with-label">
-          <a href="https://youtube.com/@falterboy1393?si=45hlWfCNy4pPPXQL" class="fab fa-youtube"></a>
-          <span>YouTube</span>
-        </div>
-        <div class="icon-with-label">
-          <a href="https://tiktok.com/@falterboyband" class="fab fa-tiktok"></a>
-          <span>TikTok</span>
-        </div>
+    <div class="social-icons">
+      <div class="icon-with-label">
+        <a href="https://www.facebook.com/falterboy" class="fab fa-facebook-f"></a>
+        <span>Facebook</span>
       </div>
-    </main>
-    <footer>
-      <p>© 2025 Falterboy</p>
-    </footer>
+      <div class="icon-with-label">
+        <a href="https://youtube.com/@falterboy1393?si=45hlWfCNy4pPPXQL" class="fab fa-youtube"></a>
+        <span>YouTube</span>
+      </div>
+      <div class="icon-with-label">
+        <a href="https://tiktok.com/@falterboyband" class="fab fa-tiktok"></a>
+        <span>TikTok</span>
+      </div>
+    </div>
+  </main>
+  <footer>
+    <p>© 2025 Falterboy</p>
+  </footer>
+
+  <script src="main.js"></script> 
+</body>
+</html>
