--- a/Falterboy-siteEPK.html
+++ b/Falterboy-siteEPK.html
@@ -29,7 +29,7 @@
   </nav>
 
   <!-- Main Image -->
-  <img id="vintage" src="JBuff_0191_vintcool.jpg" alt="Falterboy Image" class="responsive-img">
+  <img id="vintage" src="images/JS__0183.jpg" alt="Falterboy Image" class="responsive-img">
 
   <!-- Bio section -->
   <div class="belowpic">
