--- a/Falterboy-siteEPK.html
+++ b/Falterboy-siteEPK.html
@@ -33,24 +33,33 @@
 
   <!-- Bio section -->
   <div class="belowpic">
-    <h2>
-      In the vast landscape of musical artistry, there are those artists who dare to walk the path less traveled. Falterboy, the brainchild of singer-songwriter Jeremy ‘Buff’ Schantz, emerged from the humid heart of Tampa, combining the raw power of rock with the introspective depth of indie and the infectious energy of pop punk.<br><br>
-      Whether performing in intimate venues or commanding grand stages, his energy and passion invite listeners to immerse themselves in his songs. The connection between artist and audience is palpable, forging an unforgettable experience at each show.<br><br>
-      Jeremy's journey as Falterboy is a testament to his unwavering dedication, resilience, and artistic commitment. He has garnered the respect of music enthusiasts and industry insiders alike. In a world filled with noise, he reminds us that authenticity and resilience are the keys to creating music that truly matters.
-    </h2>
+   
+  <h2>
+    Falterboy is the musical alter-ego of Jeremy “Buff” Schantz — a Michigan-born fantasy-loving, D&D-rolling kid who grew up to become a Tampa frontman with a guitar, a story, and a pair of very worn-in Chuck Taylors.<br><br>
+
+    His sound blends emotionally heavy, sharply honest lyrics with upbeat, high-energy indie-rock and pop-punk spirit. It’s music built for anyone who’s ever felt out of place, fought their way forward, or learned to laugh in the dark and keep moving anyway.<br><br>
+
+    From drumming in his first Florida band to stepping into the spotlight as a songwriter and vocalist, Schantz brings a raw sincerity and a fiercely human sense of connection to every show. Whether he’s on a small stage or under festival lights, he performs with the heart of someone who still remembers discovering magic in music for the first time.<br><br>
+
+    Falterboy is less about perfection and more about resilience, story, and community — crafted for people who want to feel something real.
+  </h2>
+
   </div>
 
   <!-- Band Facts -->
-  <div class="container1">
-    <ul class="band-facts">
-      <li class="fact">Band Name: Falterboy</li>
-      <li class="fact">Location: Tampa Bay</li>
-      <li class="fact">Band Members: Jeremy "Buff" Schantz with rotating support</li>
-      <li class="fact">Genre: Pop Indie Rock</li>
-      <li class="fact">Contact Information: falterboyproject@gmail.com</li>
-    </ul>
-    <a href="FalterboyEPK.pdf">Download PDF Version</a>
-  </div>
+<div class="container1">
+  <ul class="band-facts">
+    <li class="fact">Artist Name: Falterboy</li>
+    <li class="fact">Location: Tampa Bay, Florida</li>
+    <li class="fact">Member: Jeremy "Buff" Schantz (with rotating live support)</li>
+    <li class="fact">Genre: Upbeat Indie Rock • Pop Punk • Alt Rock</li>
+    <li class="fact">Vibe: Feel-good energy with emotionally heavy lyrics</li>
+    <li class="fact">Signature Look: Chuck Taylors, jeans, and a black tee</li>
+    <li class="fact">Contact: falterboyproject@gmail.com</li>
+  </ul>
+  <a href="FalterboyEPK.pdf">Download Full EPK (PDF)</a>
+</div>
+
 
    <!-- Social Icons -->
 <div class="social-icons">
